--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "@types/lodash": "^4.14.178",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "rxjs": "~7.4.0",
