TSSYSTEM #8 Tasks page
added linters
fixed defects

--- a/angular.json
+++ b/angular.json
@@ -15,7 +15,7 @@
       },
       "root": "",
       "sourceRoot": "src",
-      "prefix": "app",
+      "prefix": "ap",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
@@ -105,9 +105,21 @@
             ],
             "scripts": []
           }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "src/**/*.ts",
+              "src/**/*.html"
+            ]
+          }
         }
       }
     }
   },
-  "defaultProject": "alphabet-project"
+  "defaultProject": "alphabet-project",
+  "cli": {
+    "defaultCollection": "@angular-eslint/schematics"
+  }
 }
